[package]
name = "project-ng"
version = "0.1.0"
edition = "2021"

# disable stack unwinding on panic
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.23"
uart_16550 = "0.3.0"
x86_64 = "0.14.11"
spin = "0.9.8"

[package.metadata.bootimage]
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
